--- a/Objects/stepMotor_arm.build_log.htm
+++ b/Objects/stepMotor_arm.build_log.htm
@@ -27,9 +27,21 @@ Project File Date:  11/15/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+assembling startup_stm32f10x_ld.s...
+compiling delay.c...
+compiling port.c...
+compiling usart.c...
+compiling spi.c...
+compiling stepMotor_ArmV5.c...
+compiling stmflash.c...
+compiling systick.c...
+compiling sys.c...
+compiling timer.c...
+compiling exti.c...
+compiling oled.c...
 compiling can.c...
 linking...
-Program Size: Code=7374 RO-data=3282 RW-data=124 ZI-data=3316  
+Program Size: Code=7362 RO-data=3282 RW-data=124 ZI-data=3316  
 ".\Objects\stepMotor_arm.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -43,7 +55,7 @@ Package Vendor: Keil
   C:\Users\Administrator\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.4.1\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
