--- a/Objects/stepMotor_arm.build_log.htm
+++ b/Objects/stepMotor_arm.build_log.htm
@@ -22,12 +22,19 @@ Dialog DLL:      TCM.DLL V1.48.0.0
  
 <h2>Project:</h2>
 c:\Users\Administrator\Desktop\stepMotor_ARM\stepMotor_arm.uvprojx
-Project File Date:  11/15/2025
+Project File Date:  12/12/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling timer.c...
 compiling stepMotor_ArmV5.c...
+compiling exti.c...
+compiling spi.c...
+compiling port.c...
+compiling oled.c...
+compiling systick.c...
+compiling usart.c...
 compiling can.c...
 linking...
 Program Size: Code=6850 RO-data=3282 RW-data=104 ZI-data=3232  
